Fixed printing on IE

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,9 +24,6 @@ $mobile-bottom-bar-height:    67px;
 // Body
 // ----
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   -webkit-overflow-scrolling: touch;
 }
 
